--- a/html/register.html
+++ b/html/register.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header> <!-- header dan footer di semua halaman sama, hanya di index yang berbeda src nya-->
+    <header> <!-- header & footer di semua halaman sama, hanya di index yang berbeda src nya-->
         <div class="header-top">
             <div class="container">
                 <div class="social-media">
@@ -35,7 +35,7 @@
                         <li><a href="help.html" data-translate-key="help-title" class="a-header-top">Bantuan</a></li>
                         <li class="language-selector-wrapper">
                             <div class="custom-select">
-                                <button class="select-button" aria-haspopup="listbox" aria-expanded="false"
+                                <button class="select-button"
                                     title="Ganti Bahasa" data-translate-key="select-lang">
                                     <span id="selected-lang-text">Bahasa Indonesia</span>
                                     <span class="arrow-down"></span>
@@ -59,7 +59,7 @@
                         <img src="../assets/logo-minecart.png" alt="MineCart Logo">
                         <span>MineCart</span>
                     </a>
-                    <button class="hamburger-btn" aria-label="Buka Menu">
+                    <button class="hamburger-btn">
                         <span></span>
                         <span></span>
                         <span></span>
@@ -121,7 +121,7 @@
                     </ul>
                 </nav>
 
-                <button class="search-toggle-btn" aria-label="Buka Pencarian">
+                <button class="search-toggle-btn">
                     <img src="../assets/logo-search.png" alt="Ikon Cari">
                 </button>
 
@@ -150,7 +150,7 @@
                         autocomplete="current-password">
                 </div>
 
-                <div class="form-group"> <!-- input konfirmasi password -->
+                <div class="form-group"> <!-- input tanggal lahir -->
                     <label for="dob" data-translate-key="label-dob">Tanggal Lahir</label>
                     <input type="date" id="dob" name="dob" required>
                 </div>
