--- a/html/products.html
+++ b/html/products.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header> <!-- header dan footer di semua halaman sama, hanya di index yang berbeda src nya-->
+    <header> <!-- header & footer di semua halaman sama, hanya di index yang berbeda src nya-->
         <div class="header-top">
             <div class="container">
                 <div class="social-media">
@@ -35,8 +35,7 @@
                         <li><a href="help.html" data-translate-key="help-title" class="a-header-top">Bantuan</a></li>
                         <li class="language-selector-wrapper">
                             <div class="custom-select">
-                                <button class="select-button" aria-haspopup="listbox" aria-expanded="false"
-                                    title="Ganti Bahasa" data-translate-key="select-lang">
+                                <button class="select-button" title="Ganti Bahasa" data-translate-key="select-lang">
                                     <span id="selected-lang-text">Bahasa Indonesia</span>
                                     <span class="arrow-down"></span>
                                 </button>
@@ -59,7 +58,7 @@
                         <img src="../assets/logo-minecart.png" alt="MineCart Logo">
                         <span>MineCart</span>
                     </a>
-                    <button class="hamburger-btn" aria-label="Buka Menu">
+                    <button class="hamburger-btn">
                         <span></span>
                         <span></span>
                         <span></span>
@@ -122,7 +121,7 @@
                     </ul>
                 </nav>
 
-                <button class="search-toggle-btn" aria-label="Buka Pencarian">
+                <button class="search-toggle-btn">
                     <img src="../assets/logo-search.png" alt="Ikon Cari">
                 </button>
 
@@ -135,7 +134,6 @@
             <div class="container">
                 <h1 class="page-title" data-translate-key="all-products-title">Semua Produk</h1>
                 <div id="category-filters" class="category-filters"></div> <!-- Tempat untuk filter kategori produk -->
-                <div id="category-filters" class="category-filters"></div> <!
                 <div class="sorting-controls"> <!-- Kontrol untuk mengurutkan produk -->
                     <label for="sort-products" data-translate-key="sort-title">Urutkan berdasarkan:</label>
                     <select id="sort-products">
